--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "bundle/nginx"]
 	path = bundle/nginx
 	url = https://github.com/vim-scripts/nginx.vim.git
+[submodule "bundle/simplenote"]
+	path = bundle/simplenote
+	url = https://github.com/mrtazz/simplenote.vim.git
