--- a/.gitmodules
+++ b/.gitmodules
@@ -64,6 +64,6 @@
 [submodule "bundle/vim-mru"]
 	path = bundle/vim-mru
 	url = https://github.com/ornicar/vim-mru.git
-[submodule "bundle/pyflakes-vim"]
-	path = bundle/pyflakes-vim
-	url = https://github.com/kevinw/pyflakes-vim.git
+[submodule "bundle/threesome"]
+	path = bundle/threesome
+	url = https://github.com/sjl/threesome.vim.git
