use normal vim again, wooooo

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [core]
-  editor = /usr/local/Cellar/macvim/v7.3-53/MacVim.app/Contents/MacOS/Vim
+  editor = vim
   excludesfile = /Users/george/.gitignore
   whitespace = trailing-space
 
