--- a/.gitconfig
+++ b/.gitconfig
@@ -10,6 +10,7 @@
 [alias]
     ap = add -p
   c = commit
+    cv = commit -v
   d = diff
   dc = diff --cached
   ld = log ORIG_HEAD.. --stat --no-merges
