--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
     path = bundle/fugitive
     url = git://github.com/tpope/vim-fugitive.git
     ignore = untracked
+[submodule "bundle/command-t"]
+	path = bundle/command-t
+	url = https://github.com/wincent/Command-T.git
