--- a/.gitmodules
+++ b/.gitmodules
@@ -8,7 +8,7 @@
     ignore = untracked
 [submodule "bundle/surround"]
     path = bundle/surround
-    url = https://github.com/vim-scripts/surround.vim.git
+    url = https://github.com/tpope/vim-surround.git
     ignore = untracked
 [submodule "bundle/haml"]
     path = bundle/haml
@@ -36,15 +36,15 @@
     ignore = untracked
 [submodule "bundle/nginx"]
     path = bundle/nginx
-    url = https://github.com/vim-scripts/nginx.vim.git
+    url = https://github.com/evanmiller/nginx-vim-syntax.git
     ignore = untracked
 [submodule "bundle/autoclose"]
     path = bundle/autoclose
-    url = https://github.com/vim-scripts/AutoClose--Alves.git
+    url = https://github.com/Townk/vim-autoclose.git
     ignore = untracked
 [submodule "bundle/closetag"]
     path = bundle/closetag
-    url = https://github.com/vim-scripts/closetag.vim.git
+    url = https://github.com/docunext/closetag.vim.git
     ignore = untracked
 [submodule "bundle/pyflakes-vim"]
     path = bundle/pyflakes-vim
@@ -64,7 +64,6 @@
 [submodule "bundle/vim-commentary"]
     path = bundle/vim-commentary
     url = git://github.com/tpope/vim-commentary.git
-    ignore = untracked
     ignore = untracked
 [submodule "bundle/fugitive"]
     path = bundle/fugitive
@@ -91,3 +90,6 @@
 [submodule "bundle/ctrlp"]
 	path = bundle/ctrlp
 	url = https://github.com/kien/ctrlp.vim
+[submodule "bundle/powerline"]
+	path = bundle/powerline
+	url = https://github.com/Lokaltog/vim-powerline
