--- a/.gitmodules
+++ b/.gitmodules
@@ -1,98 +1,95 @@
-[submodule "bundle/ack.vim"]
-    path = bundle/ack.vim
+[submodule "vim/bundle/ack.vim"]
+    path = vim/bundle/ack.vim
     url = https://github.com/mileszs/ack.vim.git
     ignore = untracked
-[submodule "bundle/nerd-tree"]
-    path = bundle/nerd-tree
+[submodule "vim/bundle/nerd-tree"]
+    path = vim/bundle/nerd-tree
     url = https://github.com/vim-scripts/The-NERD-tree.git
     ignore = untracked
-[submodule "bundle/surround"]
-    path = bundle/surround
+[submodule "vim/bundle/surround"]
+    path = vim/bundle/surround
     url = https://github.com/tpope/vim-surround.git
     ignore = untracked
-[submodule "bundle/haml"]
-    path = bundle/haml
+[submodule "vim/bundle/haml"]
+    path = vim/bundle/haml
     url = https://github.com/vim-scripts/Haml.git
     ignore = untracked
-[submodule "bundle/supertab"]
-    path = bundle/supertab
+[submodule "vim/bundle/supertab"]
+    path = vim/bundle/supertab
     url = https://github.com/ervandew/supertab.git
     ignore = untracked
-[submodule "bundle/git"]
-    path = bundle/git
+[submodule "vim/bundle/git"]
+    path = vim/bundle/git
     url = https://github.com/tpope/vim-git.git
     ignore = untracked
-[submodule "bundle/matchit"]
-    path = bundle/matchit
+[submodule "vim/bundle/matchit"]
+    path = vim/bundle/matchit
     url = https://github.com/vim-scripts/matchit.zip.git
     ignore = untracked
-[submodule "bundle/markdown"]
-    path = bundle/markdown
+[submodule "vim/bundle/markdown"]
+    path = vim/bundle/markdown
     url = https://github.com/tpope/vim-markdown.git
     ignore = untracked
-[submodule "bundle/unimpaired"]
-    path = bundle/unimpaired
+[submodule "vim/bundle/unimpaired"]
+    path = vim/bundle/unimpaired
     url = https://github.com/tpope/vim-unimpaired.git
     ignore = untracked
-[submodule "bundle/nginx"]
-    path = bundle/nginx
+[submodule "vim/bundle/nginx"]
+    path = vim/bundle/nginx
     url = https://github.com/evanmiller/nginx-vim-syntax.git
     ignore = untracked
-[submodule "bundle/autoclose"]
-    path = bundle/autoclose
+[submodule "vim/bundle/autoclose"]
+    path = vim/bundle/autoclose
     url = https://github.com/Townk/vim-autoclose.git
     ignore = untracked
-[submodule "bundle/closetag"]
-    path = bundle/closetag
+[submodule "vim/bundle/closetag"]
+    path = vim/bundle/closetag
     url = https://github.com/docunext/closetag.vim.git
     ignore = untracked
-[submodule "bundle/pyflakes-vim"]
-    path = bundle/pyflakes-vim
+[submodule "vim/bundle/pyflakes-vim"]
+    path = vim/bundle/pyflakes-vim
     url = https://github.com/kevinw/pyflakes-vim.git
     ignore = untracked
-[submodule "bundle/jslint"]
-	path = bundle/jslint
+[submodule "vim/bundle/jslint"]
+	path = vim/bundle/jslint
 	url = https://github.com/hallettj/jslint.vim.git
-[submodule "bundle/threesome"]
-    path = bundle/threesome
+[submodule "vim/bundle/threesome"]
+    path = vim/bundle/threesome
     url = https://github.com/sjl/threesome.vim.git
     ignore = untracked
-[submodule "bundle/syntastic"]
-    path = bundle/syntastic
+[submodule "vim/bundle/syntastic"]
+    path = vim/bundle/syntastic
     url = https://github.com/scrooloose/syntastic.git
     ignore = untracked
-[submodule "bundle/vim-commentary"]
-    path = bundle/vim-commentary
+[submodule "vim/bundle/vim-commentary"]
+    path = vim/bundle/vim-commentary
     url = git://github.com/tpope/vim-commentary.git
     ignore = untracked
-[submodule "bundle/fugitive"]
-    path = bundle/fugitive
+[submodule "vim/bundle/fugitive"]
+    path = vim/bundle/fugitive
     url = git://github.com/tpope/vim-fugitive.git
     ignore = untracked
-[submodule "bundle/command-t"]
-	path = bundle/command-t
+[submodule "vim/bundle/command-t"]
+	path = vim/bundle/command-t
 	url = https://github.com/wincent/Command-T.git
-[submodule "bundle/pydoc"]
-	path = bundle/pydoc
+[submodule "vim/bundle/pydoc"]
+	path = vim/bundle/pydoc
 	url = https://github.com/fs111/pydoc.vim.git
-[submodule "bundle/gundo"]
-	path = bundle/gundo
+[submodule "vim/bundle/gundo"]
+	path = vim/bundle/gundo
 	url = https://github.com/sjl/gundo.vim.git
-[submodule "bundle/vim-repeat"]
-	path = bundle/vim-repeat
+[submodule "vim/bundle/vim-repeat"]
+	path = vim/bundle/vim-repeat
 	url = https://github.com/tpope/vim-repeat
-[submodule "bundle/python-mode"]
-	path = bundle/python-mode
+[submodule "vim/bundle/python-mode"]
+	path = vim/bundle/python-mode
 	url = git://github.com/klen/python-mode.git
-[submodule "bundle/solarized"]
-	path = bundle/solarized
+[submodule "vim/bundle/solarized"]
+	path = vim/bundle/solarized
 	url = https://github.com/altercation/vim-colors-solarized
-[submodule "bundle/ctrlp"]
-	path = bundle/ctrlp
+[submodule "vim/bundle/ctrlp"]
+	path = vim/bundle/ctrlp
 	url = https://github.com/kien/ctrlp.vim
-[submodule "bundle/powerline"]
-	path = bundle/powerline
+[submodule "vim/bundle/powerline"]
+	path = vim/bundle/powerline
 	url = https://github.com/Lokaltog/vim-powerline
-[submodule "bundle/supertab"]
-	path = bundle/supertab
-	url = https://github.com/ervandew/supertab.git
