--- a/.gitmodules
+++ b/.gitmodules
@@ -1,82 +1,75 @@
-[submodule "vim/bundle/ack.vim"]
-    path = vim/bundle/ack.vim
+[submodule "vim/bundle/ack"]
+    path = vim/bundle/ack
     url = https://github.com/mileszs/ack.vim.git
-    ignore = untracked
-[submodule "vim/bundle/surround"]
-    path = vim/bundle/surround
-    url = git://github.com/tpope/vim-surround.git
-    ignore = untracked
-[submodule "vim/bundle/supertab"]
-    path = vim/bundle/supertab
-    url = https://github.com/ervandew/supertab.git
-    ignore = untracked
-[submodule "vim/bundle/git"]
-    path = vim/bundle/git
-    url = https://github.com/tpope/vim-git.git
-    ignore = untracked
-[submodule "vim/bundle/matchit"]
-    path = vim/bundle/matchit
-    url = https://github.com/vim-scripts/matchit.zip.git
-    ignore = untracked
-[submodule "vim/bundle/markdown"]
-    path = vim/bundle/markdown
-    url = https://github.com/tpope/vim-markdown.git
-    ignore = untracked
-[submodule "vim/bundle/unimpaired"]
-    path = vim/bundle/unimpaired
-    url = https://github.com/tpope/vim-unimpaired.git
-    ignore = untracked
-[submodule "vim/bundle/nginx"]
-    path = vim/bundle/nginx
-    url = https://github.com/evanmiller/nginx-vim-syntax.git
-    ignore = untracked
 [submodule "vim/bundle/autoclose"]
     path = vim/bundle/autoclose
     url = https://github.com/Townk/vim-autoclose.git
 [submodule "vim/bundle/closetag"]
     path = vim/bundle/closetag
     url = https://github.com/docunext/closetag.vim.git
-    ignore = untracked
-[submodule "vim/bundle/pyflakes-vim"]
-    path = vim/bundle/pyflakes-vim
-    url = https://github.com/kevinw/pyflakes-vim.git
-    ignore = untracked
-[submodule "vim/bundle/jslint"]
-	path = vim/bundle/jslint
-	url = https://github.com/hallettj/jslint.vim.git
-[submodule "vim/bundle/syntastic"]
-    path = vim/bundle/syntastic
-    url = https://github.com/scrooloose/syntastic.git
-    ignore = untracked
-[submodule "vim/bundle/vim-commentary"]
-    path = vim/bundle/vim-commentary
-    url = git://github.com/tpope/vim-commentary.git
-    ignore = untracked
+[submodule "vim/bundle/commentary"]
+    path = vim/bundle/commentary
+    url = https://github.com/tpope/vim-commentary.git
+[submodule "vim/bundle/ctrlp"]
+    path = vim/bundle/ctrlp
+    url = https://github.com/kien/ctrlp.vim
 [submodule "vim/bundle/fugitive"]
     path = vim/bundle/fugitive
     url = git://github.com/tpope/vim-fugitive.git
     ignore = untracked
-[submodule "vim/bundle/pydoc"]
-	path = vim/bundle/pydoc
-	url = https://github.com/fs111/pydoc.vim.git
+[submodule "vim/bundle/git"]
+    path = vim/bundle/git
+    url = https://github.com/tpope/vim-git.git
+    ignore = untracked
 [submodule "vim/bundle/gundo"]
-	path = vim/bundle/gundo
-	url = https://github.com/sjl/gundo.vim.git
-[submodule "vim/bundle/vim-repeat"]
-	path = vim/bundle/vim-repeat
-	url = https://github.com/tpope/vim-repeat
-[submodule "vim/bundle/python-mode"]
-	path = vim/bundle/python-mode
-	url = git://github.com/klen/python-mode.git
-[submodule "vim/bundle/solarized"]
-	path = vim/bundle/solarized
-	url = https://github.com/altercation/vim-colors-solarized
-[submodule "vim/bundle/ctrlp"]
-	path = vim/bundle/ctrlp
-	url = https://github.com/kien/ctrlp.vim
+    path = vim/bundle/gundo
+    url = https://github.com/sjl/gundo.vim.git
+[submodule "vim/bundle/jslint"]
+    path = vim/bundle/jslint
+    url = https://github.com/hallettj/jslint.vim.git
+[submodule "vim/bundle/markdown"]
+    path = vim/bundle/markdown
+    url = https://github.com/tpope/vim-markdown.git
+    ignore = untracked
+[submodule "vim/bundle/matchit"]
+    path = vim/bundle/matchit
+    url = https://github.com/vim-scripts/matchit.zip.git
+    ignore = untracked
+[submodule "vim/bundle/nginx"]
+    path = vim/bundle/nginx
+    url = https://github.com/evanmiller/nginx-vim-syntax.git
+    ignore = untracked
 [submodule "vim/bundle/powerline"]
-	path = vim/bundle/powerline
-	url = https://github.com/Lokaltog/vim-powerline
+    path = vim/bundle/powerline
+    url = https://github.com/Lokaltog/vim-powerline
+[submodule "vim/bundle/pydoc"]
+    path = vim/bundle/pydoc
+    url = https://github.com/fs111/pydoc.vim.git
+[submodule "vim/bundle/python-mode"]
+    path = vim/bundle/python-mode
+    url = git://github.com/klen/python-mode.git
+[submodule "vim/bundle/repeat"]
+    path = vim/bundle/repeat
+    url = https://github.com/tpope/vim-repeat.git
+[submodule "vim/bundle/solarized"]
+    path = vim/bundle/solarized
+    url = https://github.com/altercation/vim-colors-solarized
 [submodule "vim/bundle/splice"]
-	path = vim/bundle/splice
-	url = https://github.com/sjl/splice.vim.git
+    path = vim/bundle/splice
+    url = https://github.com/sjl/splice.vim.git
+[submodule "vim/bundle/supertab"]
+    path = vim/bundle/supertab
+    url = https://github.com/ervandew/supertab.git
+    ignore = untracked
+[submodule "vim/bundle/surround"]
+    path = vim/bundle/surround
+    url = git://github.com/tpope/vim-surround.git
+    ignore = untracked
+[submodule "vim/bundle/syntastic"]
+    path = vim/bundle/syntastic
+    url = https://github.com/scrooloose/syntastic.git
+    ignore = untracked
+[submodule "vim/bundle/unimpaired"]
+    path = vim/bundle/unimpaired
+    url = https://github.com/tpope/vim-unimpaired.git
+    ignore = untracked
