--- a/pip.conf
+++ b/pip.conf
@@ -4,3 +4,8 @@ timeout = 15
 download_cache = ~/.pip/cache
 allow-all-external = false
 no-allow-insecure = false
+wheel-dir = /Users/george/.pip/wheels
+find-links = /Users/george/.pip/wheels
+
+[install]
+use-wheel = true
