--- a/launchagents/com.ghickman.offlineimap.plist
+++ b/launchagents/com.ghickman.offlineimap.plist
@@ -5,10 +5,10 @@
         <key>Label</key>
         <string>com.ghickman.offlineimap</string>
         <key>StartInterval</key>
-        <integer>300</integer>
+        <integer>60</integer>
         <key>ProgramArguments</key>
         <array>
-            <string>/usr/local/bin/offlineimap -o -q -l ~/Library/Logs/offlineimap.log</string>
+            <string>/usr/local/bin/offlineimap -o -l /Users/george/Library/Logs/offlineimap.log</string>
         </array>
     </dict>
 </plist>
