--- a/.gitmodules
+++ b/.gitmodules
@@ -11,8 +11,8 @@
     path = vim/bundle/commentary
     url = https://github.com/tpope/vim-commentary.git
 [submodule "vim/bundle/ctrlp"]
-    path = vim/bundle/ctrlp
-    url = https://github.com/kien/ctrlp.vim
+	path = vim/bundle/ctrlp
+	url = https://github.com/kien/ctrlp.vim.git
 [submodule "vim/bundle/fugitive"]
     path = vim/bundle/fugitive
     url = git://github.com/tpope/vim-fugitive.git
