--- a/.gitmodules
+++ b/.gitmodules
@@ -99,6 +99,6 @@
 [submodule "vim/bundle/isort"]
 	path = vim/bundle/isort
 	url = https://github.com/fisadev/vim-isort.git
-[submodule "vim/bundle/flake8"]
-	path = vim/bundle/flake8
-	url = https://github.com/nvie/vim-flake8.git
+[submodule "vim/bundle/khuno"]
+	path = vim/bundle/khuno
+	url = https://github.com/alfredodeza/khuno.vim.git
