Fix ntsf:sd:suv:: config

--- a/tvrenamr/config.yml
+++ b/tvrenamr/config.yml
@@ -49,7 +49,7 @@ doctor who 2005:
 "marvel's avengers assemble":
   canonical: 'avengers assemble (2013)'
 
-NTSF SD SUV:
+ntsf sd suv:
   canonical: 'NTSF:SD:SUV::'
 
 once upon a time:
