--- a/.gitmodules
+++ b/.gitmodules
@@ -99,3 +99,6 @@
 [submodule "git-toolbelt"]
 	path = git-toolbelt
 	url = git@github.com:nvie/git-toolbelt.git
+[submodule "jshint2.vim"]
+	path = jshint2.vim
+	url = https://github.com/Shutnik/jshint2.vim
