--- a/pip/pip.conf
+++ b/pip/pip.conf
@@ -1,7 +1,7 @@
 [global]
 #index-url = http://192.168.0.2:8000/simple
 timeout = 15
-download_cache = ~/.pip/cache
+download-cache = ~/.pip/cache
 allow-all-external = false
 no-allow-insecure = false
 wheel-dir = /Users/george/.pip/wheels
