--- a/.gitmodules
+++ b/.gitmodules
@@ -102,3 +102,6 @@
 [submodule "vim/bundle/jshint"]
 	path = vim/bundle/jshint
 	url = https://github.com/Shutnik/jshint2.vim
+[submodule "vim/bundle/vim-mkdir-on-write"]
+	path = vim/bundle/vim-mkdir-on-write
+	url = https://github.com/scy/vim-mkdir-on-write
