--- a/.gitmodules
+++ b/.gitmodules
@@ -108,3 +108,9 @@
 [submodule "vim/bundle/vim-mkdir-on-write"]
 	path = vim/bundle/vim-mkdir-on-write
 	url = https://github.com/scy/vim-mkdir-on-write
+[submodule "vim/bundle/bufferline"]
+	path = vim/bundle/bufferline
+	url = https://github.com/bling/vim-bufferline
+[submodule "vim/bundle/jedi-vim"]
+	path = vim/bundle/jedi-vim
+	url = https://github.com/davidhalter/jedi-vim
