--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,5 @@
 setuptools
-git+https://github.com/nvie/pyflakes  # fixes issue with python3 checking
-flake8
-isort
 pip
-tvrenamr
-twine
+pipsi
 virtualenv
 virtualenvwrapper
