Capture both styles

--- a/tvrenamr/config.yml
+++ b/tvrenamr/config.yml
@@ -49,6 +49,9 @@ doctor who 2005:
 'marvels agents of s h i e l d':
   canonical: "Marvel's Agents of S.H.I.E.L.D."
 
+"marvel's agents of s h i e l d":
+  canonical: "Marvel's Agents of S.H.I.E.L.D."
+
 "marvel's avengers assemble":
   canonical: 'avengers assemble (2013)'
 
