Add splitjoin plugin to vim

--- a/.gitmodules
+++ b/.gitmodules
@@ -126,3 +126,6 @@
 [submodule "vim/bundle/isort"]
 	path = vim/bundle/isort
 	url = https://github.com/fisadev/vim-isort
+[submodule "vim/bundle/splitjoin"]
+	path = vim/bundle/splitjoin
+	url = https://github.com/AndrewRadev/splitjoin.vim
