Revert "Try running offlineimap as a continuous process"
This reverts commit cd6dd13427f9b2b7dc8dc85def33fe7caf8339aa.

--- a/launchagents/com.ghickman.offlineimap.plist
+++ b/launchagents/com.ghickman.offlineimap.plist
@@ -6,9 +6,11 @@
         <string>com.ghickman.offlineimap</string>
         <key>RunAtLoad</key>
         <true />
+        <key>StartInterval</key>
+        <integer>180</integer>
         <key>ProgramArguments</key>
         <array>
-            <string>/usr/local/bin/offlineimap</string>
+            <string>/Users/george/.mutt/offlineimap.sh</string>
         </array>
     </dict>
 </plist>
