Add dockerfile highlighting

--- a/.gitmodules
+++ b/.gitmodules
@@ -132,3 +132,6 @@
 [submodule "vim/bundle/easy-align"]
 	path = vim/bundle/easy-align
 	url = https://github.com/junegunn/vim-easy-align
+[submodule "vim/bundle/dockerfile"]
+	path = vim/bundle/dockerfile
+	url = https://github.com/honza/dockerfile.vim
