--- a/tmux.conf
+++ b/tmux.conf
@@ -1,15 +1,10 @@
 # Plugins
-set -g @tpm_plugins '              \
-    tmux-plugins/tpm               \
-    tmux-plugins/tmux-resurrect    \
-    tmux-plugins/tmux-continuum    \
-'
-
-# Initializes TMUX plugin manager.
-# Keep this line at the very bottom of tmux.conf.
-run-shell '~/.tmux/plugins/tpm/tpm'
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 
 
+# Prefix
 # Set Ctrl-a as the prefix
 unbind C-b
 set -g prefix C-a
@@ -17,15 +12,13 @@ bind C-a send-prefix
 
 
 # Tell continuum plugin to restore session
-set -g @continuum-restore 'on'
+# set -g @continuum-restore 'on'
 
-# Smart pane switching with awareness of vim splits
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-# Remove time delay when using esc
-set -sg escape-time 0
+# Nicer split management
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
+
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
