--- a/tmux.conf
+++ b/tmux.conf
@@ -19,6 +19,10 @@ bind C-a send-prefix
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
+# Start windows and panes at 1
+set -g base-index 1
+set-window-option -g pane-base-index 1
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
