macos clipboard integration

--- a/tmux.conf
+++ b/tmux.conf
@@ -24,5 +24,15 @@ set -g base-index 1
 set-window-option -g pane-base-index 1
 
 
+# System Clipboard Integration
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
