Use jhead for jpegs so we avoid rename collisions

--- a/tmux.conf
+++ b/tmux.conf
@@ -34,5 +34,9 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-n
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
 
+# Sane colours
+set -g default-terminal "screen-256color"
+
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
