--- a/tmux.conf
+++ b/tmux.conf
@@ -34,8 +34,10 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-n
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
 
-# Sane colours
-set -g default-terminal "screen-256color"
+# Enable true color and italics, also matches iterm
+# Modified from info here:
+# https://github.com/alacritty/alacritty/issues/489#issuecomment-288074579
+set -g default-terminal "xterm-256color"
 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
