Configure 256 colour with italics term profiles inside tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -37,7 +37,8 @@ bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 # Enable true color and italics, also matches iterm
 # Modified from info here:
 # https://github.com/alacritty/alacritty/issues/489#issuecomment-288074579
-set -g default-terminal "xterm-256color"
+set -g default-terminal 'tmux-256color'
+set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
