--- a/git/config
+++ b/git/config
@@ -79,7 +79,14 @@
     colorMoved = default
     indentHeuristic = true
     noprefix = true
+    tool = difftastic
     wsErrorHighlight = all
+
+[difftool]
+    prompt = false
+
+[difftool "difftastic"]
+    cmd = difft "$LOCAL" "$REMOTE"
 
 [fetch]
     prune = true
@@ -108,6 +115,9 @@
 [mergetool "splice"]
     cmd = "$EDITOR -f $BASE $LOCAL $REMOTE $MERGED -c 'SpliceInit'"
     trustExitCode = true
+
+[pager]
+    difftool = true
 
 [pull]
     rebase = true
