Switch to histogram algorithm for git
Seems to be a little more stable in my testing

--- a/git/config
+++ b/git/config
@@ -75,7 +75,7 @@
     verbose = true
 
 [diff]
-    algorithm = patience
+    algorithm = histogram
     colorMoved = default
     indentHeuristic = true
     noprefix = true
